logs/orchard.log
Listing '.'...
Listing './bin'...
Compiling './bin/wsdump.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/orchard'...
Listing './lib/python3.5/site-packages/orchard/certs'...
Compiling './lib/python3.5/site-packages/orchard/client.py'...
***   File "./lib/python3.5/site-packages/orchard/client.py", line 54
    except requests.exceptions.HTTPError, e:
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/orchard/models'...
Compiling './lib/python3.5/site-packages/orchard/models/host.py'...
***   File "./lib/python3.5/site-packages/orchard/models/host.py", line 20
    os.chmod(self._keys_path(), 0700)
                                   ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/orchard/packages'...
Listing './lib/python3.5/site-packages/orchard/packages/docker'...
Listing './lib/python3.5/site-packages/orchard/packages/docker/auth'...
Listing './lib/python3.5/site-packages/orchard/packages/docker/unixconn'...
Listing './lib/python3.5/site-packages/orchard/packages/docker/utils'...
Listing './lib/python3.5/site-packages/orchard-2.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/charade'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests-2.2.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Compiling './lib/python3.5/site-packages/websocket.py'...
***   File "./lib/python3.5/site-packages/websocket.py", line 769
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/websocket_client-0.11.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
